# Store-Management

./: .gitignore  CMakeLists.txt  Documentatie_POO.DOCX  FisierAngajati.txt  FisierComenzi.txt  FisierProduse.txt  README.md  angajat.cpp  angajat.h  asistent.cpp  asistent.h  comanda.cpp  comanda.h  data.h  disc.cpp  disc.h  disc_vintage.cpp  disc_vintage.h  haine.cpp  haine.h  main.cpp  manager.cpp  manager.h  operator.cpp  operator.h  produs.cpp  produs.h  store.cpp  store.h
